fix(data table, table setting, pagination, globalFilter): dark mode token updates (#300)
* feat(custom-date-picker): updated custom date, time, date range pickers w flatpickr (#242)

* feat(data table): data table dark mode tokens

* feat: pagination

* feat: table setting component css token values

* fix: weird border effect on table settings

* fix: expand__button violations

* feat: globalFilter minor token update

* chore: update packages

* chore: update icons lib version

* fix: match icons

* fix: additional token corrections

* fix: deprecated token values replaced

* fix: additional tokens, temp unread

* fix: bug 2064950 pagination dropdown

* fix: robert updated unread token

* fix: remove unnecessary !importants

* revert dropdown fallback to span from input

* fix: caption alignment

* chore: cleanup

* chore: cleanup

* fix: dropdown inline-block

* chore: additional cleanup

* fix: remove unused breaking change property

* fix: remove unnecessary class

* fix: code review

* fix: update --kd-color-text-level-disabled

* chore: update foundation

* feat: consolidate .clear icon styles into form-input

* fix: additional close icon button style consolidation

* fix: expand button functionality in nested table

* fix(side drawer): convert side drawer close button to tertiary to match ux (#323)

* fix: side drawer tertiary button to match ux

* chore: run analyze for new sideDrawer property

* fix: remove unnecessary class from close icon

* fix: modal close button to tertiary as well

* chore: update foundation

* fix: table search confirm alert converted to console.log

* fix: priyanka disabled rows story bug

* fix: disabled rows

* chore: update analyze

* chore: update foundation

--- a/src/common/scss/mixins.scss
+++ b/src/common/scss/mixins.scss
@@ -20,13 +20,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
   border-radius: 2px;
   border: 1px solid transparent;
   cursor: pointer;
-
-  &:hover {
-    background: var(--kd-color-background-ui-hollow-hover);
-  }
 
   &:active,
   &:focus {
